# coordenadas

./: Cargo.toml  README.md  build-cross.sh
src/: backend.rs  dialog.glade  dialogo_cadastra_perfis.glade  dialogo_cadastra_perfis.rs  dialogo_cadastra_perfis.ui  frontend_data_check.rs  main.rs  main_window.glade  main_window.rs  main_window.ui  ui-teste-2.glade~  ui-teste.glade  ui.glade  ui.glade~  utils.rs
