[package]
name = "coordenadas"
version = "1.0.0"
authors = ["marcio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"

[dependencies.gtk]
package = "gtk4"
version = "0.4.7"
features = ["v4_6"]
