[package]
name = "coordenadas"
version = "1.0.0"
authors = ["marcio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
csv = "1.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dependencies.gtk]
package = "gtk4"
version = "0.5"
features = ["v4_8"]
