[package]
name = "coordenadas"
version = "1.0.0"
authors = ["marcio"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.2"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yml = "0.0.12"

[dependencies.gtk]
package = "gtk4"
version = "0.10.0"
features = ["v4_18"]
